# RAGIndexingMicroservice

./: .replit  README.md  chunking_output.py  gunicorn.conf.py  overall_arch.txt  pyproject.toml  wsgi.py
output/: pdf_chunks.json
src/: __init__.py  config.py  main.py
src/api/: __init__.py  routes.py
src/chunking/: base.py  manager.py  sentence_chunker.py
src/indexing/: base.py  strategy_manager.py
src/indexing/strategies/: __init__.py  json_indexer.py  simple_directory_reader.py
src/output/: __init__.py  formatter.py
src/preprocessing/: __init__.py  processor.py
src/preprocessing/extractors/: __init__.py  pdf_extractor.py  text_extractor.py
src/utils/: __init__.py  schema_validator.py  validators.py
test_docs/: test.txt
tests/: test_api.py  test_chunking.py  test_indexing.py  test_output.py  test_preprocessing.py  test_sentence_chunker.py
tests/e2e_tests/: test_pdf_chunking_flow.py
