[project]
name = "repl-nix-rag-indexing-microservice"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "psycopg2-binary>=2.9.10",
    "pypdf2>=3.0.1",
    "pytest>=8.3.3",
    "llama-index>=0.12.1",
    "nltk>=3.9.1",
    "gunicorn>=23.0.0",
    "flask-cors>=5.0.0",
]
